--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cumulocity-runtime-widget",
+  "name": "moro-map-runtime-widget",
   "interleave": {
-    "dist\\bundle-src\\custom-widget.js": "cumulocity-runtime-widget-CustomWidget",
-    "dist/bundle-src/custom-widget.js": "cumulocity-runtime-widget-CustomWidget"
+    "dist\\bundle-src\\custom-widget.js": "moro-map-runtime-widget-CustomWidget",
+    "dist/bundle-src/custom-widget.js": "moro-map-runtime-widget-CustomWidget"
   },
   "version": "0.0.0-development",
   "description": "Template widget for runtime loading in Cumulocity using the cumulocity-runtime-widget-loader (written by Software AG Global Presales)",
@@ -13,6 +13,7 @@
   "author": "Richard Peach - Software AG, Global Presales",
   "license": "Apache 2.0",
   "dependencies": {
+    "leaflet": "^1.7.1"
   },
   "peerDependencies": {
     "@angular/common": "8.2.13",
